2839 update tests