@@ -20,13 +20,19 @@ import static com.bytechef.component.definition.ComponentDsl.option;
 import static com.bytechef.component.heygen.constant.HeyGenConstants.ID;
 import static com.bytechef.component.heygen.constant.HeyGenConstants.NAME;
 import static com.bytechef.component.heygen.constant.HeyGenConstants.TEMPLATE_ID;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentCaptor.forClass;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import com.bytechef.component.definition.ActionContext;
+import com.bytechef.component.definition.Context.ContextFunction;
+import com.bytechef.component.definition.Context.Http;
 import com.bytechef.component.definition.Context.Http.Body;
+import com.bytechef.component.definition.Context.Http.Configuration.ConfigurationBuilder;
 import com.bytechef.component.definition.Context.Http.Executor;
 import com.bytechef.component.definition.Context.Http.Response;
 import com.bytechef.component.definition.Option;
@@ -34,7 +40,6 @@ import com.bytechef.component.definition.Parameters;
 import com.bytechef.component.definition.TriggerContext;
 import com.bytechef.component.definition.TriggerDefinition.WebhookBody;
 import com.bytechef.component.definition.TypeReference;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
@@ -45,43 +50,113 @@ import org.mockito.ArgumentCaptor;
  */
 class HeyGenUtilsTest {
 
-    private final ArgumentCaptor<Body> bodyArgumentCaptor = ArgumentCaptor.forClass(Body.class);
+    private final ArgumentCaptor<Body> bodyArgumentCaptor = forClass(Body.class);
+    private final ArgumentCaptor<ConfigurationBuilder> configurationBuilderArgumentCaptor =
+        forClass(ConfigurationBuilder.class);
+    @SuppressWarnings("unchecked")
+    private final ArgumentCaptor<ContextFunction<Http, Executor>> httpFunctionArgumentCaptor =
+        forClass(ContextFunction.class);
     private final ActionContext mockedContext = mock(ActionContext.class);
     private final Executor mockedExecutor = mock(Executor.class);
+    private final Http mockedHttp = mock(Http.class);
     private final Object mockedObject = mock(Object.class);
     private final Parameters mockedParameters = mock(Parameters.class);
     private final Response mockedResponse = mock(Response.class);
     private final TriggerContext mockedTriggerContext = mock(TriggerContext.class);
     private final WebhookBody mockedWebhookBody = mock(WebhookBody.class);
-    private final ArgumentCaptor<Object[]> queryArgumentCaptor = ArgumentCaptor.forClass(Object[].class);
+    private final ArgumentCaptor<Object[]> queryArgumentCaptor = forClass(Object[].class);
+    private final ArgumentCaptor<String> stringArgumentCaptor = forClass(String.class);
+
+    @Test
+    void testDeleteWebhook() {
+        when(mockedTriggerContext.http(httpFunctionArgumentCaptor.capture()))
+            .thenAnswer(inv -> {
+                ContextFunction<Http, Http.Executor> value = httpFunctionArgumentCaptor.getValue();
+
+                return value.apply(mockedHttp);
+            });
+        when(mockedHttp.delete(stringArgumentCaptor.capture()))
+            .thenReturn(mockedExecutor);
+        when(mockedExecutor.queryParameter(stringArgumentCaptor.capture(), stringArgumentCaptor.capture()))
+            .thenReturn(mockedExecutor);
+        when(mockedExecutor.execute())
+            .thenReturn(mockedResponse);
+
+        HeyGenUtils.deleteWebhook(mockedTriggerContext, "abc");
+
+        ContextFunction<Http, Http.Executor> capturedFunction = httpFunctionArgumentCaptor.getValue();
+
+        assertNotNull(capturedFunction);
+        assertEquals(
+            List.of("https://api.heygen.com/v1/webhook/endpoint.delete", "endpoint_id", "abc"),
+            stringArgumentCaptor.getAllValues());
+    }
 
     @Test
     void testGetFolderIdOptions() {
-        when(mockedContext.http(any()))
+        when(mockedContext.http(httpFunctionArgumentCaptor.capture()))
+            .thenAnswer(inv -> {
+                ContextFunction<Http, Http.Executor> value = httpFunctionArgumentCaptor.getValue();
+
+                return value.apply(mockedHttp);
+            });
+        when(mockedHttp.get(stringArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
         when(mockedExecutor.queryParameters(queryArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
-        when(mockedExecutor.configuration(any()))
+        when(mockedExecutor.configuration(configurationBuilderArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
         when(mockedExecutor.execute())
             .thenReturn(mockedResponse);
         when(mockedResponse.getBody(any(TypeReference.class)))
-            .thenReturn(Map.of("data", Map.of("folders", List.of(Map.of(ID, "1", NAME, "test")))));
+            .thenReturn(
+                Map.of("data", Map.of("folders", List.of(Map.of(ID, "1", NAME, "a")), "token", "xy")),
+                Map.of("data", Map.of("folders", List.of(Map.of(ID, "2", NAME, "b")))));
 
         List<Option<String>> result = HeyGenUtils.getFolderIdOptions(
             mockedParameters, null, Map.of(), "", mockedContext);
 
-        assertEquals(List.of(option("test", "1")), result);
+        assertEquals(List.of(option("a", "1"), option("b", "2")), result);
 
-        Object[] query = queryArgumentCaptor.getValue();
-        assertEquals(Arrays.asList("limit", 100, "token", null), Arrays.asList(query));
+        ContextFunction<Http, Http.Executor> capturedFunction = httpFunctionArgumentCaptor.getValue();
+
+        assertNotNull(capturedFunction);
+
+        ConfigurationBuilder configurationBuilder = configurationBuilderArgumentCaptor.getValue();
+        Http.Configuration configuration = configurationBuilder.build();
+        Http.ResponseType responseType = configuration.getResponseType();
+
+        assertEquals(Http.ResponseType.Type.JSON, responseType.getType());
+        assertEquals(List.of("https://api.heygen.com/v1/folders", "https://api.heygen.com/v1/folders"),
+            stringArgumentCaptor.getAllValues());
+
+        List<Object[]> queryArgumentCaptorAllValues = queryArgumentCaptor.getAllValues();
+
+        assertEquals(2, queryArgumentCaptorAllValues.size());
+
+        Object[] objects1 = {
+            "limit", 100, "token", null
+        };
+
+        Object[] objects2 = {
+            "limit", 100, "token", "xy"
+        };
+
+        assertArrayEquals(objects1, queryArgumentCaptorAllValues.getFirst());
+        assertArrayEquals(objects2, queryArgumentCaptorAllValues.getLast());
     }
 
     @Test
     void testGetLanguageOptions() {
-        when(mockedContext.http(any()))
+        when(mockedContext.http(httpFunctionArgumentCaptor.capture()))
+            .thenAnswer(inv -> {
+                ContextFunction<Http, Http.Executor> value = httpFunctionArgumentCaptor.getValue();
+
+                return value.apply(mockedHttp);
+            });
+        when(mockedHttp.get(stringArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
-        when(mockedExecutor.configuration(any()))
+        when(mockedExecutor.configuration(configurationBuilderArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
         when(mockedExecutor.execute())
             .thenReturn(mockedResponse);
@@ -92,13 +167,30 @@ class HeyGenUtilsTest {
             mockedParameters, null, Map.of(), "", mockedContext);
 
         assertEquals(List.of(option("English", "English")), result);
+
+        ContextFunction<Http, Http.Executor> capturedFunction = httpFunctionArgumentCaptor.getValue();
+
+        assertNotNull(capturedFunction);
+
+        ConfigurationBuilder configurationBuilder = configurationBuilderArgumentCaptor.getValue();
+        Http.Configuration configuration = configurationBuilder.build();
+        Http.ResponseType responseType = configuration.getResponseType();
+
+        assertEquals(Http.ResponseType.Type.JSON, responseType.getType());
+        assertEquals("https://api.heygen.com/v2/video_translate/target_languages", stringArgumentCaptor.getValue());
     }
 
     @Test
     void testGetTemplateIdOptions() {
-        when(mockedContext.http(any()))
+        when(mockedContext.http(httpFunctionArgumentCaptor.capture()))
+            .thenAnswer(inv -> {
+                ContextFunction<Http, Http.Executor> value = httpFunctionArgumentCaptor.getValue();
+
+                return value.apply(mockedHttp);
+            });
+        when(mockedHttp.get(stringArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
-        when(mockedExecutor.configuration(any()))
+        when(mockedExecutor.configuration(configurationBuilderArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
         when(mockedExecutor.execute())
             .thenReturn(mockedResponse);
@@ -110,6 +202,17 @@ class HeyGenUtilsTest {
             mockedParameters, null, Map.of(), "", mockedContext);
 
         assertEquals(List.of(option("test", "1")), result);
+
+        ContextFunction<Http, Http.Executor> capturedFunction = httpFunctionArgumentCaptor.getValue();
+
+        assertNotNull(capturedFunction);
+
+        ConfigurationBuilder configurationBuilder = configurationBuilderArgumentCaptor.getValue();
+        Http.Configuration configuration = configurationBuilder.build();
+        Http.ResponseType responseType = configuration.getResponseType();
+
+        assertEquals(Http.ResponseType.Type.JSON, responseType.getType());
+        assertEquals("https://api.heygen.com/v2/templates", stringArgumentCaptor.getValue());
     }
 
     @Test
@@ -127,11 +230,17 @@ class HeyGenUtilsTest {
         String webhookUrl = "testWebhookUrl";
         String eventType = "testEventType";
 
-        when(mockedTriggerContext.http(any()))
+        when(mockedTriggerContext.http(httpFunctionArgumentCaptor.capture()))
+            .thenAnswer(inv -> {
+                ContextFunction<Http, Http.Executor> value = httpFunctionArgumentCaptor.getValue();
+
+                return value.apply(mockedHttp);
+            });
+        when(mockedHttp.post(stringArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
         when(mockedExecutor.body(bodyArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
-        when(mockedExecutor.configuration(any()))
+        when(mockedExecutor.configuration(configurationBuilderArgumentCaptor.capture()))
             .thenReturn(mockedExecutor);
         when(mockedExecutor.execute())
             .thenReturn(mockedResponse);
@@ -142,7 +251,18 @@ class HeyGenUtilsTest {
 
         assertEquals("1", result);
 
-        Body body = bodyArgumentCaptor.getValue();
-        assertEquals(Map.of("url", webhookUrl, "events", List.of(eventType)), body.getContent());
+        ContextFunction<Http, Http.Executor> capturedFunction = httpFunctionArgumentCaptor.getValue();
+
+        assertNotNull(capturedFunction);
+
+        ConfigurationBuilder configurationBuilder = configurationBuilderArgumentCaptor.getValue();
+        Http.Configuration configuration = configurationBuilder.build();
+        Http.ResponseType responseType = configuration.getResponseType();
+
+        assertEquals(Http.ResponseType.Type.JSON, responseType.getType());
+        assertEquals("https://api.heygen.com/v1/webhook/endpoint.add", stringArgumentCaptor.getValue());
+        assertEquals(
+            Body.of(Map.of("url", webhookUrl, "events", List.of(eventType)), Http.BodyContentType.JSON),
+            bodyArgumentCaptor.getValue());
     }
 }
